# network-automation-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION.md  Dockerfile  PROGRESS_TRACKER.md  README.md  agent.py  app.py  config.yaml  docker-compose.yaml  hosts.example.yaml  hosts.py  implementation.md  main.py  migrate_yaml_to_db.py  plan.md  pyproject.toml  requirements.txt  settings.py  test_chat.py  test_ui_emojis.py
agent/: __init__.py  constants.py  nodes.py  prompts.py  router.py  schemas.py  state.py  workflow.py  workflow_manager.py
agent/nodes/: __init__.py  approval_node.py  base_node.py  context_manager_node.py  (+8 more)
cli/: __init__.py  application.py  bootstrapper.py  command_processor.py  orchestrator.py
config/: hosts.yaml
core/: __init__.py  config.py  context_manager.py  device_inventory.py  llm_provider.py  message_manager.py  nornir_manager.py  task_executor.py  token_manager.py
docs/: ARCHITECTURE.md  api-reference.md  cli-usage.md  configuration.md  plan.md  troubleshooting.md
graph/: consts.py  nodes.py  prompts.py  router.py
llm/: client.py  setup.py  utils.py
monitoring/: __init__.py  alerting.py  callbacks.py  dashboard.py  tracing.py
net_lab/: topology.yml
src/: agent.py
tests/: conftest.py  test_agent.py
tools/: __init__.py  base.py  base_tool.py  commands.py  config.py  config_tool.py  format_tool.py  multi_command.py  plan.py  plan_tool.py  registry.py  response.py  response_tool.py  run_command.py  show.py  show_tool.py  validators.py  verify_tool.py
ui/: __init__.py  console_ui.py
utils/: __init__.py  database.py  devices.py  graph.py  llm_helpers.py  logger.py  memory.py  responses.py  ui.py  validators.py
(+17 files in other folders)
