[project]
name = "network-automation-agent"
version = "0.1.0"
description = "Network Automation Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.8",
    "langchain-groq>=1.0.1",
    "langgraph>=1.0.3",
    "netmiko>=4.6.0",
    "ntc-templates>=8.1.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
    "sqlalchemy>=2.0.31",
    "pyyaml>=6.0.1",
]
