[project]
name = "network-automation-agent"
version = "0.1.0"
description = "Network Automation Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-groq>=0.3.0",
    "langgraph>=0.2.0",
    "netmiko>=4.4.0",
    "ntc-templates>=5.1.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "sqlalchemy>=2.0.36",
    "pyyaml>=6.0.2",
]

[tool.ruff]
line-length = 99
