[project]
name = "network-automation-agent"
version = "0.1.0"
description = "Network Automation Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-groq>=0.3.0",
    "langgraph>=0.2.0",
    "netmiko>=4.4.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "nornir>=3.5.0",
    "nornir-netmiko>=1.0.1",
    "nornir-utils>=0.2.0",
    "prompt-toolkit>=3.0.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "tiktoken>=0.7.0",
]

[tool.ruff]
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
